Changed routing so that splash screen is shown.

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,11 @@
   <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
   <link rel="icon" href="icons/favicon.png">
   <link rel="manifest" href="/manifest.json">
+  <style type="text/css">
+    [v-cloak] {
+      display: none;
+    }
+  </style>
   
   <!-- built styles file will be auto injected -->
 </head>
