Added tailwind. WIP with problem details page.

--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,15 @@
   <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
   <link rel="icon" href="icons/favicon.png">
   <link rel="manifest" href="/manifest.json">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
   <style type="text/css">
     [v-cloak] {
       display: none;
+    }
+    body {
+      font-family : 'Fira Sans', sans-serif;
     }
   </style>
   
