Refactoring of the code (due to auth0) Added QR code reader to read the problem QR code.

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       * Enable inline JS: add 'unsafe-inline' to default-src
   -->
   <meta http-equiv="Content-Security-Policy"
-    content="default-src * 'self' 'unsafe-inline' 'unsafe-eval' data: gap: content:">
+    content="default-src * 'self' 'unsafe-inline' 'unsafe-eval' data: gap: content: blob:">
   <meta name="viewport"
     content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
 
