Added climber profile page first draft. Added link to climber profile from ranking.

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,8 @@
   <link rel="icon" href="icons/favicon.png">
   <link rel="manifest" href="/manifest.json">
 
+  <script src="https://kit.fontawesome.com/5702e9d8c0.js" crossorigin="anonymous"></script>
+
 
   <!-- built styles file will be auto injected -->
 </head>
