fix(comps): Added support for comp entries without authentication

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
   <meta name="msapplication-tap-highlight" content="no">
   <title>Problemator</title>
 
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
   <link rel="icon" href="icons/favicon.png">
